--- a/src/App.css
+++ b/src/App.css
@@ -7,17 +7,21 @@
     margin-bottom: 5px;
 }
 
-.email {
-  font-size: 12px;
-    color: grey;
-    position: relative;
-    top: -80px;
-    text-align: right;
+.row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 }
 
-.title {
-  font-size: 12px;
-    font-weight: bold;
+.remove-note-buttons-left {
+    float: left;
+    margin-top: -18px;
 }
-.bodyText {
+
+.remove-note-buttons-right {
+    float: right;
+    margin-top: -18px;
+}
+
+.done-note {
+  color: red;
 }
